--- a/style.scss
+++ b/style.scss
@@ -97,17 +97,19 @@ aside.main-sidebar{
 	}
 
 }
-.dashboard{
+h1{
+	font-size: 6.5rem;
+	font-weight: 300;
+	text-shadow: 4px 4px 7px rgba(100, 100, 100, 0.1);
+}
+h1, h2, h3, h4, p, a{color: $text;}
+.main-content{
+	padding: 40px;
 	height: auto;
 	overflow:auto;
-	padding: 40px;
 	padding-right: 50px;
-	h1{
-		font-size: 6.5rem;
-		font-weight: 300;
-		text-shadow: 4px 4px 7px rgba(100, 100, 100, 0.1);
-	}
-	h1, h2, h3, h4, p, a{color: $text;}
+}
+.dashboard{
 	.username{
 		font-weight: 600;
 		font-size: 1.6rem;
@@ -176,3 +178,128 @@ aside.main-sidebar{
 
 }
 
+.products-main{
+	.controls{
+		.grid{
+			margin:0 10px 0 20px;
+		}
+		.order-type{
+			font-size: 2rem;
+		}
+	}
+	.filters{
+		max-width: 60%;
+		> p{
+			position: relative;
+			top:8px;
+		}
+		select{
+			// height: 40px;
+			font-size: 2rem;
+			padding:2px 30px 2px 10px;
+			font-style:italic !important;
+			border:1px solid #ccc;
+			color: $text;
+			&:first-of-type{
+				margin-right: 10px;
+				margin-left: 20px;
+			}
+		}
+	}
+	.tags{
+		max-width: 30%;
+		.tag{
+			background-color:$hlblue;
+			padding:10px 20px 10px 15px;
+			color: #fff;
+			text-align: left;
+			font-weight: 600;
+			float: left;
+			margin-right: 15px;
+			@include transition(all, 300ms);
+			&:after{
+				content: 'x';
+				margin-left: 15px;
+			}
+			&:hover{
+				background-color: darken($hlblue, 20%);
+			}
+		}
+	}
+	.product{
+		margin-bottom: 40px;
+		background-color:rgba(255,255,255,.6);
+		border:1px dashed #ccc;
+		.links, .img{padding:5%;}
+		.links{
+			border-bottom-right-radius: 10px;
+			border-bottom-left-radius:10px;
+		}
+		hr{
+			border-color:#ccc;
+			border-style:dashed;
+			margin:0 5%;
+
+		}
+		.img{
+			position: relative !important;
+			&, img{
+				display: block;
+				margin: 0 auto;
+			}
+			img{width: 30%;}
+		}
+		a{
+			display: block;
+			text-align: center;
+		}
+
+		&:hover .overlay{opacity:1;}
+		.overlay{
+			background:rgba(54,71,96, .5);
+			text-align:center;
+			padding:35% 0;
+			width: 100%;
+			height: 100%;
+			opacity:0;
+			position: absolute;
+			top: 0;
+			left: 0;
+			-webkit-transition: opacity .25s ease;
+			-moz-transition: opacity .25s ease;
+			.fa{
+				font-size: 2rem;
+				margin-right: 10px;
+			}
+			.add-to-cart{
+				display: inline-block;
+				padding: 15px 30px;
+				opacity:.85;
+				&:hover{
+					color: #fff;
+				}
+			}
+		}
+	}
+	.pag{
+		width: 460px;
+		margin: 0 auto;
+		ul{margin: 0; padding: 0;}
+		li{
+
+			list-style: none;
+			float:left;
+			margin:0 20px;
+			a{
+				font-weight: 600;
+				font-size: 5rem;
+			}
+			&.disabled a{
+				opacity:.6;
+				cursor: default;
+				&:hover{color: $text;}
+			}
+			&.active a{color: $hlblue;}
+		}
+	}
+}
