--- a/style.scss
+++ b/style.scss
@@ -45,9 +45,11 @@ aside.main-sidebar{
 		color: $hlblue;
 	}
 	background-color: $main;
+	height: 100vh;
+	position:fixed;
 	padding: 0;
 	display: block;
-	height: 100vh;
+	// height: 100vh;
 
 	.carrito{width: 100%;}
 	hr.special{border-width:3px; border-color: $dkblue; margin-bottom: 0;}
@@ -55,6 +57,7 @@ aside.main-sidebar{
 	.logout{
 		width: 120px;
 		margin: 0 auto;
+		margin-top: 25%;
 		i{margin-right: 10px; @include transition(all, 300ms);}
 		border-bottom:1px dotted #C6D2D8;
 		&:hover{
@@ -108,6 +111,7 @@ h1, h2, h3, h4, p, a{color: $text;}
 	height: auto;
 	overflow:auto;
 	padding-right: 50px;
+	margin-left: 16.5%;
 }
 .dashboard{
 	.username{
@@ -301,5 +305,89 @@ h1, h2, h3, h4, p, a{color: $text;}
 			}
 			&.active a{color: $hlblue;}
 		}
+	}
+}
+.speed-checkout{
+	.btn.bg-teal{
+		width: 300px;
+		height: 80px;
+		font-size: 3rem;
+		line-height: 220%;
+		margin:0 auto;
+		display: block;
+	}
+	a.btn i{margin-right: 5px;}
+	form.capture{
+		width: 80%;
+		margin: 0 auto;
+		margin-top: 3%;
+		input{
+			color: lighten(#2a2a2a, 20%);
+			border:0 none;
+			background:transparent;
+			border-bottom:1px solid #ccc;
+			font-size:6rem;
+			padding:0 20px;
+			font-weight: 300;
+		}
+		#prodsearch{
+			width: 75%;
+			margin-right: 4%;
+		}
+		#cant{
+			width: 20%;
+			text-align: center;
+		}
+	}
+	table.arts{
+		width: 65%;
+		margin: 0 auto;
+		font-size: 2.2rem;
+		color: $dkblue;
+		th{
+			padding-bottom: 20px;
+		}
+		td{padding-bottom: 15px;}
+		tr:nth-child(2n+1) td{color: $text;}
+		.delete:hover{color: #fe4a49; }
+		.actions{padding-left: 20px;}
+	}
+
+}
+
+.order-main{
+	hr.special{
+		border-top:1px solid #ccc;
+		border-bottom: 1px solid #F4F6FA;
+	}
+	.table{
+		h3{margin-bottom: 30px; }
+		width: 100%;
+		margin: 0 auto;
+		table{width: 100%;}
+	}
+	table{
+		border:1px solid #ccc;
+		border-spacing: 0;
+		border-collapse:separate !important;
+		overflow: hidden;
+		border-radius:7px;
+
+		th{color: $text;}
+		td, th{
+			background-color: rgba(255,255,255,.7);
+			padding-top:10px;
+			padding-bottom:10px;
+			border-bottom:1px solid #DADFEA;
+		}
+		th:first-of-type{
+			text-align: center;
+		}
+		td:first-of-type{padding-left:20px;}
+		td:last-of-type{padding-right: 20px;}
+		tr:nth-child(2n+1) td{
+			background-color:darken(#FCFDFE, 3%);
+		}
+		tbody tr:last-child td{border-bottom:0 none;}
 	}
 }
