--- a/style.scss
+++ b/style.scss
@@ -417,3 +417,26 @@ h1, h2, h3, h4, p, a{color: $text;}
 	}
 }
 
+.add-user-form{
+	width: 50%;
+	input, label{
+		display: block;
+		color: $text;
+	}
+	input{
+		margin-bottom: 20px;
+	}
+	.textinput{
+		width: 100%;
+		height:40px;
+		padding:0 10px;
+		border-radius:5px;
+		border:1px solid lighten($ltext, 10%);
+	}
+	.submit{
+		float: left;
+		margin-top: 40px;
+		color: #fff !important;
+		font-weight: 600;
+	}
+}
