--- a/style.scss
+++ b/style.scss
@@ -98,7 +98,16 @@ aside.main-sidebar{
 		display: block;
 		width: 100%;
 	}
-
+	&.sidebarprov{
+		.counter.ico{
+			margin-left: 10px;
+			// background-color:rgba(255,197,0,0.8);
+			background-color: darken($main, 11%);
+			border-radius:50%;
+			padding:1.8% 4.5%;
+			font-size: 1.2rem;
+		}
+	}
 }
 h1{
 	font-size: 6.5rem;
@@ -285,6 +294,9 @@ h1, h2, h3, h4, p, a{color: $text;}
 			}
 		}
 	}
+	&.clientes{
+		.product{img{width: 100%; padding:25% 0 !important; display: block;}}
+	}
 	.pag{
 		width: 460px;
 		margin: 0 auto;
@@ -390,4 +402,66 @@ h1, h2, h3, h4, p, a{color: $text;}
 		}
 		tbody tr:last-child td{border-bottom:0 none;}
 	}
+}
+.row-eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+}
+.productsprov{
+	.search-form #query{
+		background-color: transparent;
+		width: 80%;
+		border: 0 none;
+		border-bottom: 1px solid #ccc;
+		font-size: 4rem;
+		color: $main;
+		font-weight: 300;
+		padding-left: 60px;
+	}
+	.fa-search{
+		position: absolute;
+		margin-top: 15px;
+		margin-left: 5px;
+		font-size: 3.2rem;
+		color: $ltext;
+
+	}
+}
+.orderssup{
+	.status{
+		display: block;
+		width: 10px;
+		height: 10px;
+		border-radius:50%;
+		background-color:#29BC8B;
+	}
+	tr:last-child .status{background-color:#E61845;}
+}
+.orderdetail{
+	.btn.bg-teal{
+		width: 100%;
+		height: 80px;
+		line-height: 2.2em;
+		font-size: 3rem;
+	}
+	.selectize-input{
+		width: 80%;
+	}
+	.information{
+		padding-left:30px;
+		ul{
+			padding:0;
+			margin-left: 10px;
+			li{
+				line-height: 180%;
+				margin: 0;
+				font-size: 1.6rem;
+				color: $text;
+				a{color: $hlblue;}
+			}
+		}
+	}
+
 }
