--- a/style.scss
+++ b/style.scss
@@ -52,7 +52,13 @@ aside.main-sidebar{
 	// height: 100vh;
 
 	.carrito{width: 100%;}
-	hr.special{border-width:3px; border-color: $dkblue; margin-bottom: 0;}
+	hr.special{
+		// border-width:px;
+		border-top:1px solid darken($dkblue, 2%);
+		border-bottom:1px solid lighten($main, 5%);
+		// border-color: $dkblue;
+		margin-bottom: 0;
+	}
 	.logout, .carrito{display: block; margin: 0 auto; text-align: center;}
 	.logout{
 		width: 120px;
@@ -260,7 +266,13 @@ h1, h2, h3, h4, p, a{color: $text;}
 				display: block;
 				margin: 0 auto;
 			}
-			img{width: 30%;}
+			img{
+				// width: 100%;
+				margin: 0 auto;
+				// max-height: 200px;
+				height: 200px;
+				width: auto;
+			}
 		}
 		a{
 			display: block;
@@ -429,6 +441,61 @@ h1, h2, h3, h4, p, a{color: $text;}
 
 	}
 }
+.search-product{
+	padding: 0 !important;
+	background-color:#fff;
+	.search-form{
+		width: 94%;
+		border-bottom:1px solid #ddd;
+		input[type="text"]{
+			height: 70px;
+			width: 100%;
+			padding: 0;
+			font-size: 1.6rem;
+			border:0 none;
+			color: $text;
+			// font-weight: 300;
+			padding-left: 50px;
+		}
+		.fa.fa-search{
+			position: absolute;
+			font-size: 1.6rem;
+			color: $ltext;
+			opacity:.7;
+			left: 20px;
+			top: 27px;
+		}
+
+	}
+	.add-product{
+		width: 6%;
+		display: block;
+		text-align: center;
+		color: lighten($ltext, 20%);
+		font-size: 2rem;
+		border-left:1px solid #ddd;
+		height: 71px;
+		line-height: 3.7em;
+		border-bottom:1px solid #ddd;
+		&:hover{
+			background-color:$hlblue;
+			color: #fff;
+		}
+		// display: inline-block;
+		vertical-align: middle;
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+		// box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+		-webkit-backface-visibility: hidden;
+		backface-visibility: hidden;
+		-moz-osx-font-smoothing: grayscale;
+		overflow: hidden;
+		-webkit-transition-duration: 0.3s;
+		transition-duration: 0.3s;
+		-webkit-transition-property: color, background-color;
+		transition-property: color, background-color;
+	}
+}
 .orderssup{
 	.status{
 		display: block;
@@ -465,3 +532,118 @@ h1, h2, h3, h4, p, a{color: $text;}
 	}
 
 }
+.main-content.carrito{
+	padding:40px !important;
+	.cart{
+		width: 70%;
+		float: left;
+	}
+	ul{padding-left: 20px;}
+	li{list-style: none;}
+	.product{
+		background-color:#fff;
+		display: block;
+		width: 100%;
+		border:1px dashed #ccc;
+		padding:25px;
+		position: relative;
+		margin-bottom: 2%;
+
+		.img{
+			width: 100%;
+			display: block;
+		}
+		.col-md-1{padding: 0;}
+		img{
+			height: 100px;
+			display: block;
+			margin: 0 auto;
+		}
+		a{display: inline-block;}
+		.prodname{
+			font-size: 2.5rem;
+			line-height: 100%;
+			display: block;
+			margin-bottom: 5%;
+		}
+		.title{
+			font-weight: 600;
+			margin-bottom: 30px;
+			text-align: center;
+			color: $ltext;
+			font-size: 1.1rem;
+		}
+		.value{font-size: 2.5rem; text-align: center;}
+		.del-btn{
+			background-color:#F94363;
+			width: 30px;
+			color: #fff;
+			text-align: center;
+			position: absolute;
+			height: 101%;
+			font-weight: 600;
+			line-height: 2em;
+			margin-top: -26px;
+			right: -2px;
+			padding-top: 8%;
+			opacity:0;
+			@include transition(all, 300ms);
+		}
+		.third{padding: 0;}
+		&:hover .del-btn{opacity:1; }
+	}
+}
+.resumen{
+	.content{
+
+	}
+	background-color:rgba(255,255,255,.9);
+	padding:2% 3% !important;
+	display: block;
+	border:1px dashed #ccc;
+	float: left;
+	width: 23%;
+	margin-left: 2%;
+	position: fixed;
+	right: 40px;
+	ul{
+		color: $ltext;
+		padding: 7%  0!important;
+		margin: 0 !important;
+		&, li{width: 100%;}
+		li:first-child{margin-bottom: 10px; }
+		span{float: right;}
+	}
+	h2{
+		text-align: center;
+		padding-bottom: 10px;
+		border-bottom:1px dashed #ccc;
+		margin-bottom: 20px;
+	}
+	hr{border-color: #ccc;}
+	.total{
+		width: 100%;
+		label{
+			position: relative;
+			top: 15px;
+			font-weight: 400;
+		}
+		span.spec{
+			font-size: 3rem;
+			letter-spacing: .02em;
+			float: right;
+			color: $hlblue;
+		}
+	}
+	.btn.checkout{
+		width: 100%;
+		height: 50px;
+		font-size: 2rem;
+		line-height: 160%;
+		margin-top: 10%;
+		border-radius:0;
+	}
+
+
+}
+.delbtn{ i{margin-right: 5px;}}
